--- a/AppEntrega/templates/AppEntrega/padre.html
+++ b/AppEntrega/templates/AppEntrega/padre.html
@@ -34,7 +34,7 @@
                     <div class="col-xl-6">
                         <div class="text-center text-white">
                             <!-- Page heading-->
-                            <h1 class="mb-5">Tercera pre-entrega - Python - Coderhouse</h1>
+                            <h1 class="mb-5">Tercera pre-entrega - Python Coderhouse</h1>
                             <h2>Gestion de sistema de laboratorio</h2>
                                                         
                         </div>
